# giga-dagster

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Taskfile.yml  catalog-info.yml  dagster.yaml  docker-compose-local.yaml  docker-compose-network.yaml  docker-compose.local.yaml  docker-compose.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  workspace.yaml
authproxy/: .env.example  Dockerfile  Dockerfile.prod  docker-entrypoint.sh  gunicorn.conf.py  main.py  prod.Dockerfile  pyproject.toml
authproxy/authproxy/: app.py  settings.py
authproxy/authproxy/lib/: auth.py  session.py  templates.py
authproxy/authproxy/permissions/: __init__.py  is_authenticated.py
authproxy/authproxy/routers/: auth.py
authproxy/authproxy/templates/: base.html.j2  error.html.j2  login.html.j2  unauthorized.html.j2
dagster/: .dockerignore  .env.example  .flake8  Dockerfile  Dockerfile.prod  dagster.tmpl.yaml  dagster.yaml  docker-entrypoint.dev.sh  prod.Dockerfile  pyproject.toml  pytest.ini  workspace.yaml
dagster/models/: __init__.py  approval_requests.py  base.py  base_database.py  connectivity_rt.py  deletion_requests.py  file_upload.py  ingest_api_qos.py  mappings.py  qos_apis.py  schema.py  users.py
dagster/schemas/: master_school_data.json  raw_school_data.json
dagster/scripts/: convert_gold_csv_to_delta.py  data-sharing-demo.py  data_sharing_demo.py  datahub_create_assertions.py  fake.csv  fake_v2.csv  fake_v3.csv  fake_v4.csv  github_api_calls.py  infer_schema.py  migrate_wasbs_to_abfss.py  rename_files.py  schema_versioning.py
dagster/sql/: create_bronze_table.sql.mako  create_coverage_table.sql.mako  create_geolocation_table.sql.mako  create_gold_schema.sql.mako  create_gold_table.sql.mako  create_master_table.sql.mako  create_qos_bra_table.sql.mako  create_reference_table.sql.mako  create_schema.sql.mako  create_school_master_table.sql.mako  create_school_reference_table.sql.mako  create_silver_table.sql.mako  qos-BRA.csv  school-coverage.csv  school-geolocation.csv  school-master.csv  school-reference.csv
dagster/src/: __init__.py  constants.py  definitions.py  jobs.py  partitions.py  repository.py  schedules.py  sensors.py  settings.py
dagster/src/_utils/: adls.py  datahub.py  get_adls_filepath_list.py  get_destination_path_from_filepath.py  io_managers.py  load_from_adls.py  sentry.py  spark.py  sql.py  upload_to_adls.py
dagster/src/assets/: __init__.py  adls_test_asset.py  assets.py  delta_poc_op.py  functions_asset.py  great_expectations.py
dagster/src/backfill/: school_geolocation_metadata.py
dagster/src/constants/: __init__.py  constants_class.py  data_tier.py  datahub.py  staging_changes.py  upload_mode.py
dagster/src/data_quality_checks/: column_relation.py  config.py  coverage.py  create_update.py  critical.py  dq_context.py  duplicates.py  geography.py  geometry.py  geospatial.py  name_similarity.py  precision.py  standard.py  utils.py
dagster/src/exceptions/: __init__.py
dagster/src/functions/: adls_client.py  get_adls_filepath_list.py  get_destination_path_from_filepath.py  load_from_adls.py  upload_to_adls.py
dagster/src/hooks/: __init__.py  school_master.py  slack_notification.py
dagster/src/internal/: connectivity_queries.py  graph_client.py  groups.py  merge.py  school_geolocation_api_queries.py
dagster/src/io_managers/: __init__.py  adls2_csv.py  adls2_delta.py  adls2_json.py  common.py
dagster/src/jobs/: __init__.py  adhoc.py  admin.py  analytics_tables.py  backfill_school_geolocation.py  data_passthrough.py  datahub.py  debug.py  generate_test_cdf.py  giga_meter.py  incremental.py  log_added_file.py  migrations.py  qos.py  qos_availability.py  qos_vct.py  school_connectivity.py  school_geolocation.py  school_geolocation_api.py  school_master.py  superset.py  unstructured.py  upload-download-pipeline.py  upload_processing.py
dagster/src/ops/: delta_poc_op.py
dagster/src/partitions/: qos.py
dagster/src/resources/: __init__.py  _utils.py  adls_file_client.py  datahub_emitter.py  get_destination_file_path.py  io_manager.py  superset.py
dagster/src/schedule/: analytics_tables.py  datahub.py  qos_availability.py  qos_school_list.py  qos_vct.py  school_connectivity.py  school_geolocation_api.py  school_list.py  superset.py  upload_processing.py
dagster/src/schemas/: __init__.py  approval_request.py  base.py  connectivity_rt.py  email.py  file_upload.py  filename_components.py  qos.py  school_master.py  school_reference.py  user.py
dagster/src/sensors/: __init__.py  adhoc.py  adls_new_file.py  base.py  config.py  giga_meter.py  migrations.py  qos.py  qos_availability.py  school_connectivity.py  school_coverage.py  school_geolocation.py  school_master.py  sensors.py  unstructured.py  upload_processing.py
dagster/src/spark/: __init__.py  check_functions.py  config_expectations.py  coverage_transform_functions.py  data_quality_tests.py  poc.py  raw_data_rename_function.py  spark.py  transform_functions.py  udf_dependencies.py  user_defined_functions.py
dagster/src/transforms/: jobs.py  sensors.py
dagster/src/utils/: adls.py  aggregate_value_maps_for_pdf.py  apis.py  country.py  data_quality_descriptions.py  dataframe.py  datahub_gx.py  db.py  delta.py  delta_optimize.py  dq_kit_generator.py  external_db.py  filename.py  giga_meter_helpers.py  giga_spatial_processor.py  github_api_calls.py  ingest_azure_ad.py  logger.py  map_generator.py  metadata.py  op_config.py  pandas.py  schema.py  send_email_dq_report.py  send_email_master_release_notification.py  send_slack_master_release_notification.py  sentry.py  silver_sync.py  spark.py  sql.py  string.py  write_fuzzy_mismatches.py
dagster/tests/: conftest.py  test_assets.py  test_constants.py  test_definitions.py  test_partitions_real.py  test_settings.py
dagster/tests/data_quality_checks/: test_column_relation_real.py  test_coverage_check.py  test_create_update_real.py  test_critical_real.py  test_dq_complete.py  test_dq_utils.py  test_duplicates_real.py  test_geography_real.py  (+6 more)
(+402 files in other folders)
