[tool.poetry]
name = "giga-dagster-authproxy"
version = "0.1.0"
description = ""
authors = ["Thinking Machines <hello@thinkingmachin.es>"]
readme = "../docs/README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pydantic = {extras = ["email"], version = "^2.4.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
gunicorn = "^21.2.0"
pydantic-settings = "^2.0.3"
msal = "^1.24.0"
httpx = "^0.25.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
identity = "^0.3.0"
loguru = "^0.7.2"
sentry-sdk = {extras = ["fastapi"], version = "^1.35.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
