[tool.poetry]
name = "giga-dagster"
version = "0.1.0"
description = ""
authors = ["Thinking Machines <hello@thinkingmachin.es>"]
readme = "../docs/README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scipy = ">=1.10.0"
cryptography = ">=41.0.4"
sentry-sdk = "^1.35.0"
openpyxl = "^3.1.2"
loguru = "^0.7.2"
icecream = "^2.1.3"
azure-communication-email = "^1.0.0"

[tool.poetry.group.dagster.dependencies]
dagster = "1.5.0"
dagster-webserver = "1.5.0"
dagster_docker = "0.21.0"
dagster-postgres = "0.21.0"
dagster-pyspark = "0.21.0"
pendulum = "<3"

[tool.poetry.group.pipelines.dependencies]
dagster = "1.5.0"
dagster-webserver = "1.5.0"
dagster-azure = "0.21.0"
dagster_docker = "0.21.0"
dagster-postgres = "0.21.0"
dagster-k8s = "0.21.0"
azure-storage-blob = "^12.17.0"
azure-storage-file-datalake = "^12.13.1"
pytest-cov = "4.0.0"
azure-identity = "^1.14.0"
geopy = "^2.4.0"
h3 = "^3.7.6"
fastparquet = "^2023.8.0"
grpcio-status = "^1.59.0"
acryl-datahub = { extras = ["azure-ad"], version = "^0.12.0.1" }
shapely = "^2.0.2"
geopandas = "^0.14.1"
thefuzz = "^0.20.0"
country-converter = "^1.1.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
pydantic = { extras = ["email"], version = "<2.0.0" }
cuid2 = "^2.0.0"

[tool.poetry.group.spark.dependencies]
pyspark = "3.5.0"
delta-spark = "3.0.0"
deltalake = "0.12.0"
pyarrow = "11.0.0"
pyarrow-hotfix = "^0.5"
roapi = "0.9.0"

[tool.poetry.group.notebook.dependencies]
ipython = "^8.15.0"
jupyterlab = "^4.0.8"
jupyter = "^1.0.0"
notebook = "^7.0.6"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
ruff = "^0.1.13"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "src.definitions"

[tool.ruff]
target-version = "py311"
ignore-init-module-imports = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402", "C408"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[tool.bandit]
tests = [
    "B324",
    "B501", 'B502', "B503", "B504", "B505", "B506", "B507", "B508", "B509",
    "B602", "B604", "B605", "B606", "B608", "B609"
]
